03 - Add Layout for pages

--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -1,3 +1,69 @@
-h1 {
-  text-align: center;
+@import 'package:angular_components/app_layout/mixins';
+@import 'package:angular_components/material_button/mixins';
+
+.material-content.page-wrap {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  >material-content {
+    display: flex;
+    flex: 1;
+  }
+}
+
+// FOOTER STYLE
+footer.footer {
+  padding: 12px;
+  font-size: 12px;
+  margin-top: 40px;
+  background: $mat-indigo-500;
+  color: #fff;
+  position: relative;
+}
+
+.footer-list {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 8px;
+  justify-content: space-between;
+
+  .footer-logo {
+    flex: 1;
+
+    span {
+      display: inline-block;
+      line-height: 50px;
+      margin: 0 10px;
+      vertical-align: bottom;
+      a {
+        font-size: 16px;
+        padding: 0;
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  .footer-dart-logo {
+    height: 50px;
+  }
+
+  .footer-copyright {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+    flex-direction: column;
+    max-width: 225px;
+    text-align: left;
+    a {
+      text-decoration: none;
+      color: inherit;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
