--- a/lib/src/profile/profile_component.scss
+++ b/lib/src/profile/profile_component.scss
@@ -29,7 +29,7 @@ section.posts-wrapper {
   flex-wrap: wrap;
   justify-content: center;
 
-  mdc-card {
+  ng-blog-post{
     margin-top: 25px;
     margin-right: 25px;
   }
